# dangling-finder

./: .flake8  README.md  pyproject.toml
.github/actions/setup-python/: action.yaml
.github/workflows/: linting.yaml  pypi.yaml  setup.yaml
dangling_finder/: __main__.py  children.py  listing.py  main.py  output.py
help/: README.md
