[tool.poetry]
name = "dangling-finder"
version = "0.1.0"
description = ""
authors = ["Mickaël Fontès <81414455+MickaelFontes@users.noreply.github.com>"]
readme = "help/README.md"

[tool.poetry.scripts]
dangling-finder = "dangling_finder.main:app"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.3"
beautifulsoup4 = "^4.12.3"
typer = {extras = ["all"], version = "^0.9.0"}
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
